--- a/prep/ex1_finished.ipynb
+++ b/prep/ex1_finished.ipynb
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1028,13 +1028,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 9012,\n",
-      "  \"iopub_port\": 9014,\n",
-      "  \"stdin_port\": 9013,\n",
-      "  \"control_port\": 9011,\n",
-      "  \"hb_port\": 9010,\n",
+      "  \"shell_port\": 9002,\n",
+      "  \"iopub_port\": 9004,\n",
+      "  \"stdin_port\": 9003,\n",
+      "  \"control_port\": 9001,\n",
+      "  \"hb_port\": 9000,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"f6611411-0c93-46a4-9b54-ccdb01e3f3d9\",\n",
+      "  \"key\": \"d58c693d-5a16-485a-956e-3a918d219c7a\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1043,7 +1043,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-v2-64214NEbzqN3oj68z.json\n",
+      "    $> jupyter <app> --existing kernel-v2-69066ELG84BcAjFrd.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -1051,7 +1051,42 @@
     }
    ],
    "source": [
-    "# Setup data chimp checks\n",
+    "# Setup data chimp checks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"shell_port\": 9002,\n",
+      "  \"iopub_port\": 9004,\n",
+      "  \"stdin_port\": 9003,\n",
+      "  \"control_port\": 9001,\n",
+      "  \"hb_port\": 9000,\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"key\": \"4529bb63-ff5b-4601-b62b-ede2d55188ca\",\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\",\n",
+      "  \"kernel_name\": \"\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-v2-55034BNxRIhvdaYL0.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
+   "source": [
     "%connect_info"
    ]
   },
