--- a/prep/ex1_finished.ipynb
+++ b/prep/ex1_finished.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('borked_iris.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/getdatachimp/demo/main/prep/borked_iris.csv')\n",
     "X = df[['sepal_length', 'sepal_width', 'petal_length', 'petal_width']]\n",
     "y = df['variety'].map({'Setosa': 0, 'Versicolor': 1, 'Virginica': 2})\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
