--- a/data_chimp/default.ipynb
+++ b/data_chimp/default.ipynb
@@ -102,6 +102,7 @@
       ],
       "source": [
         "import os\n",
+        "import sys\n",
         "\n",
         "def flag_bad_tables():\n",
         "  global dc_code\n",
@@ -135,23 +136,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "ename": "AttributeError",
-          "evalue": "module 'pandera' has no attribute 'SchemaError'",
+          "evalue": "'SchemaError' object has no attribute 'message'",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/var/folders/_m/c86lwlfs2k193z0w0mp2tslr0000gp/T/ipykernel_64661/1856879271.py\u001b[0m in \u001b[0;36mv\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m   \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mschema\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalidate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m   \u001b[0;32mexcept\u001b[0m \u001b[0mpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSchemaError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined",
+            "\u001b[0;31mSchemaError\u001b[0m                               Traceback (most recent call last)",
+            "\u001b[1;32m/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb Cell 6\u001b[0m in \u001b[0;36mvalidate\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb#W5sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb#W5sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m   schema\u001b[39m.\u001b[39;49mvalidate(df)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb#W5sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+            "File \u001b[0;32m~/.pyenv/versions/3.11.1/lib/python3.11/site-packages/pandera/schemas.py:534\u001b[0m, in \u001b[0;36mDataFrameSchema.validate\u001b[0;34m(self, check_obj, head, tail, sample, random_state, lazy, inplace)\u001b[0m\n\u001b[1;32m    532\u001b[0m     \u001b[39mreturn\u001b[39;00m check_obj\u001b[39m.\u001b[39mpandera\u001b[39m.\u001b[39madd_schema(\u001b[39mself\u001b[39m)\n\u001b[0;32m--> 534\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate(\n\u001b[1;32m    535\u001b[0m     check_obj\u001b[39m=\u001b[39;49mcheck_obj,\n\u001b[1;32m    536\u001b[0m     head\u001b[39m=\u001b[39;49mhead,\n\u001b[1;32m    537\u001b[0m     tail\u001b[39m=\u001b[39;49mtail,\n\u001b[1;32m    538\u001b[0m     sample\u001b[39m=\u001b[39;49msample,\n\u001b[1;32m    539\u001b[0m     random_state\u001b[39m=\u001b[39;49mrandom_state,\n\u001b[1;32m    540\u001b[0m     lazy\u001b[39m=\u001b[39;49mlazy,\n\u001b[1;32m    541\u001b[0m     inplace\u001b[39m=\u001b[39;49minplace,\n\u001b[1;32m    542\u001b[0m )\n",
+            "File \u001b[0;32m~/.pyenv/versions/3.11.1/lib/python3.11/site-packages/pandera/schemas.py:671\u001b[0m, in \u001b[0;36mDataFrameSchema._validate\u001b[0;34m(self, check_obj, head, tail, sample, random_state, lazy, inplace)\u001b[0m\n\u001b[1;32m    668\u001b[0m         msg \u001b[39m=\u001b[39m (\n\u001b[1;32m    669\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcolumn \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mcolname\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m not in dataframe\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{\u001b[39;00mcheck_obj\u001b[39m.\u001b[39mhead()\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    670\u001b[0m         )\n\u001b[0;32m--> 671\u001b[0m         error_handler\u001b[39m.\u001b[39;49mcollect_error(\n\u001b[1;32m    672\u001b[0m             \u001b[39m\"\u001b[39;49m\u001b[39mcolumn_not_in_dataframe\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m    673\u001b[0m             errors\u001b[39m.\u001b[39;49mSchemaError(\n\u001b[1;32m    674\u001b[0m                 \u001b[39mself\u001b[39;49m,\n\u001b[1;32m    675\u001b[0m                 check_obj,\n\u001b[1;32m    676\u001b[0m                 msg,\n\u001b[1;32m    677\u001b[0m                 failure_cases\u001b[39m=\u001b[39;49mscalar_failure_case(colname),\n\u001b[1;32m    678\u001b[0m                 check\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcolumn_in_dataframe\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m    679\u001b[0m             ),\n\u001b[1;32m    680\u001b[0m         )\n\u001b[1;32m    682\u001b[0m \u001b[39m# coerce data types\u001b[39;00m\n",
+            "File \u001b[0;32m~/.pyenv/versions/3.11.1/lib/python3.11/site-packages/pandera/error_handlers.py:32\u001b[0m, in \u001b[0;36mSchemaErrorHandler.collect_error\u001b[0;34m(self, reason_code, schema_error, original_exc)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lazy:\n\u001b[0;32m---> 32\u001b[0m     \u001b[39mraise\u001b[39;00m schema_error \u001b[39mfrom\u001b[39;00m \u001b[39moriginal_exc\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \u001b[39m# delete data of validated object from SchemaError object to prevent\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[39m# storing copies of the validated DataFrame/Series for every\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[39m# SchemaError collected.\u001b[39;00m\n",
+            "\u001b[0;31mSchemaError\u001b[0m: column 'variety' not in dataframe\n   PassengerId  Survived  Pclass  \\\n0            1         0       3   \n1            2         1       1   \n2            3         1       3   \n3            4         1       1   \n4            5         0       3   \n\n                                                Name     Sex   Age  SibSp  \\\n0                            Braund, Mr. Owen Harris    male  22.0      1   \n1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n2                             Heikkinen, Miss. Laina  female  26.0      0   \n3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n4                           Allen, Mr. William Henry    male  35.0      0   \n\n   Parch            Ticket     Fare Cabin Embarked  \n0      0         A/5 21171   7.2500   NaN        S  \n1      0          PC 17599  71.2833   C85        C  \n2      0  STON/O2. 3101282   7.9250   NaN        S  \n3      0            113803  53.1000  C123        S  \n4      0            373450   8.0500   NaN        S  ",
             "\nDuring handling of the above exception, another exception occurred:\n",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/var/folders/_m/c86lwlfs2k193z0w0mp2tslr0000gp/T/ipykernel_64661/1856879271.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m   \u001b[0;32mexcept\u001b[0m \u001b[0mpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSchemaError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfailure_cases\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/var/folders/_m/c86lwlfs2k193z0w0mp2tslr0000gp/T/ipykernel_64661/1856879271.py\u001b[0m in \u001b[0;36mv\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m   \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mschema\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalidate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m   \u001b[0;32mexcept\u001b[0m \u001b[0mpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSchemaError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfailure_cases\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'pandera' has no attribute 'SchemaError'"
+            "\u001b[1;32m/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb#W5sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m   \u001b[39mexcept\u001b[39;00m SchemaError \u001b[39mas\u001b[39;00m ex:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb#W5sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m ex\u001b[39m.\u001b[39mmessage, ex\u001b[39m.\u001b[39mfailure_cases\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb#W5sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m validate()\n",
+            "\u001b[1;32m/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb Cell 6\u001b[0m in \u001b[0;36mvalidate\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb#W5sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb#W5sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mexcept\u001b[39;00m SchemaError \u001b[39mas\u001b[39;00m ex:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/mattdupree/Developer/datachimp/demo-quality-pipeline/data_chimp/default.ipynb#W5sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m ex\u001b[39m.\u001b[39;49mmessage, ex\u001b[39m.\u001b[39mfailure_cases\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'SchemaError' object has no attribute 'message'"
           ]
         }
       ],
@@ -162,9 +166,9 @@
         "schema = pa.DataFrameSchema({\n",
         "  'variety': pa.Column(str),\n",
         "  'petal_length': pa.Column(float, [\n",
-        "    pa.Check(lambda g: g['Versicolor'].min() <= 30, groupby='variety'), \n",
-        "    pa.Check(lambda g: g['Setosa'] <= 10, groupby='variety'),\n",
-        "    pa.Check(lambda g: g['Virginica'] <= 40, groupby='variety')\n",
+        "    pa.Check(lambda g: g['Versicolor'] <= 1, groupby='variety'), \n",
+        "    # pa.Check(lambda g: g['Setosa'].max() <= 10, groupby='variety'),\n",
+        "    # pa.Check(lambda g: g['Virginica'].max() <= 40, groupby='variety')\n",
         "    ])\n",
         "})\n",
         "\n",
@@ -187,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "tags": [
           "dchimp.ignore"
@@ -232,7 +236,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1"
+      "version": "3.11.1 (main, Dec 12 2022, 12:11:53) [Clang 13.1.6 (clang-1316.0.21.2.5)]"
     },
     "orig_nbformat": 4,
     "vscode": {
