remove pandera from default.ipynb

--- a/data_chimp/default.ipynb
+++ b/data_chimp/default.ipynb
@@ -160,25 +160,20 @@
         }
       ],
       "source": [
-        "import pandera as pa\n",
-        "from pandera.errors import SchemaError\n",
+        "import pandas as pd\n",
+        "min = pd.DataFrame(\n",
+        "    index=['Setosa', 'Versicolor', 'Virginica'], \n",
+        "    data={\n",
+        "          'min_petal_length': [10, 30, 45],\n",
+        "          'min_petal_width': [1, 10, 14],\n",
+        "  })\n",
         "\n",
-        "schema = pa.DataFrameSchema({\n",
-        "  'variety': pa.Column(str),\n",
-        "  'petal_length': pa.Column(float, [\n",
-        "    pa.Check(lambda g: g['Versicolor'] <= 1, groupby='variety'), \n",
-        "    # pa.Check(lambda g: g['Setosa'].max() <= 10, groupby='variety'),\n",
-        "    # pa.Check(lambda g: g['Virginica'].max() <= 40, groupby='variety')\n",
-        "    ])\n",
-        "})\n",
-        "\n",
-        "def validate():\n",
-        "  try:\n",
-        "    schema.validate(df)\n",
-        "    return None\n",
-        "  except SchemaError as ex:\n",
-        "    return ex.failure_cases\n",
-        "validate()"
+        "result = (\n",
+        "    df[['variety', 'petal_length', 'petal_width']]\n",
+        "      .join(min, on='variety')\n",
+        "      .query('petal_length > min_petal_length | petal_width > min_petal_width')\n",
+        ")\n",
+        "result if not result.empty else None"
       ]
     },
     {
