--- a/prep/ex1_finished.ipynb
+++ b/prep/ex1_finished.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "[150 rows x 7 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,38 +1246,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"shell_port\": 9002,\n",
-      "  \"iopub_port\": 9004,\n",
-      "  \"stdin_port\": 9003,\n",
-      "  \"control_port\": 9001,\n",
-      "  \"hb_port\": 9000,\n",
-      "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"0c513d03-0bf4-4411-87e5-3f5fe9eabc55\",\n",
-      "  \"transport\": \"tcp\",\n",
-      "  \"signature_scheme\": \"hmac-sha256\",\n",
-      "  \"kernel_name\": \"\"\n",
-      "}\n",
-      "\n",
-      "Paste the above JSON into a file, and connect with:\n",
-      "    $> jupyter <app> --existing <file>\n",
-      "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-v2-8479452Y81dtO0m65.json\n",
-      "or even just:\n",
-      "    $> jupyter <app> --existing\n",
-      "if this is the most recent Jupyter kernel you have started.\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variety</th>\n",
+       "      <th>petal_length</th>\n",
+       "      <th>petal_width</th>\n",
+       "      <th>min_petal_length</th>\n",
+       "      <th>min_petal_width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Setosa</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Setosa</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Setosa</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Setosa</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Setosa</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>Virginica</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>45</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>Virginica</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>45</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>Virginica</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>Virginica</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>45</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>Virginica</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>45</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>123 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       variety  petal_length  petal_width  min_petal_length  min_petal_width\n",
+       "0       Setosa           1.4          0.2                10                1\n",
+       "1       Setosa           1.4          0.2                10                1\n",
+       "2       Setosa           1.3          0.2                10                1\n",
+       "3       Setosa           1.5          0.2                10                1\n",
+       "4       Setosa           1.4          0.2                10                1\n",
+       "..         ...           ...          ...               ...              ...\n",
+       "145  Virginica           5.2          2.3                45               14\n",
+       "146  Virginica           5.0          1.9                45               14\n",
+       "147  Virginica           5.2          2.0                45               14\n",
+       "148  Virginica           5.4          2.3                45               14\n",
+       "149  Virginica           5.1          1.8                45               14\n",
+       "\n",
+       "[123 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%connect_info"
+    "#Here's what you can type into default.ipynb\n",
+    "min = pd.DataFrame(\n",
+    "    index=['Setosa', 'Versicolor', 'Virginica'], \n",
+    "    data={\n",
+    "          'min_petal_length': [10, 30, 45],\n",
+    "          'min_petal_width': [1, 10, 14],\n",
+    "  })\n",
+    "\n",
+    "result = (\n",
+    "    df[['variety', 'petal_length', 'petal_width']]\n",
+    "      .join(min, on='variety')\n",
+    "      .query('petal_length > min_petal_length | petal_width > min_petal_width')\n",
+    ")\n",
+    "result if not result.empty else None\n"
    ]
   },
   {
@@ -1286,26 +1416,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Here's what you can type into default.ipynb\n",
-    "import pandera as pa\n",
-    "from pandera.errors import SchemaError\n",
-    "\n",
-    "schema = pa.DataFrameSchema({\n",
-    "  'variety': pa.Column(str),\n",
-    "  'petal_length': pa.Column(float, [\n",
-    "    pa.Check(lambda g: g['Versicolor'].min() <= 30, groupby='variety'), \n",
-    "    pa.Check(lambda g: g['Setosa'] <= 10, groupby='variety'),\n",
-    "    pa.Check(lambda g: g['Virginica'] <= 40, groupby='variety')\n",
-    "    ])\n",
-    "})\n",
-    "\n",
-    "def validate():\n",
-    "  try:\n",
-    "    schema.validate(df)\n",
-    "    return None\n",
-    "  except SchemaError as ex:\n",
-    "    return ex.failure_cases\n",
-    "validate()"
+    "min\n",
+    "(\n",
+    "    df[['variety', 'petal_length', 'petal_width']]\n",
+    "      .join(min, on='variety')\n",
+    "      .query('petal_length < min_petal_length | petal_width < min_petal_width')\n",
+    ")\n"
    ]
   },
   {
