--- a/prep/ex1_finished.ipynb
+++ b/prep/ex1_finished.ipynb
@@ -855,355 +855,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal_length</th>\n",
-       "      <th>sepal_width</th>\n",
-       "      <th>petal_length</th>\n",
-       "      <th>petal_width</th>\n",
-       "      <th>variety</th>\n",
-       "      <th>collector</th>\n",
-       "      <th>predicate_proba</th>\n",
-       "      <th>predicate_wrong_pred</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>4.4</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>5.2</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>Setosa</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    sepal_length  sepal_width  petal_length  petal_width variety collector  \\\n",
-       "0            5.1          3.5           1.4          0.2  Setosa       Sam   \n",
-       "2            4.7          3.2           1.3          0.2  Setosa       Sam   \n",
-       "6            4.6          3.4           1.4          0.3  Setosa       Sam   \n",
-       "7            5.0          3.4           1.5          0.2  Setosa       Sam   \n",
-       "8            4.4          2.9           1.4          0.2  Setosa       Sam   \n",
-       "10           5.4          3.7           1.5          0.2  Setosa       Sam   \n",
-       "12           4.8          3.0           1.4          0.1  Setosa       Sam   \n",
-       "14           5.8          4.0           1.2          0.2  Setosa       Sam   \n",
-       "15           5.7          4.4           1.5          0.4  Setosa       Sam   \n",
-       "18           5.7          3.8           1.7          0.3  Setosa       Sam   \n",
-       "19           5.1          3.8           1.5          0.3  Setosa       Sam   \n",
-       "20           5.4          3.4           1.7          0.2  Setosa       Sam   \n",
-       "21           5.1          3.7           1.5          0.4  Setosa       Sam   \n",
-       "24           4.8          3.4           1.9          0.2  Setosa       Sam   \n",
-       "26           5.0          3.4           1.6          0.4  Setosa       Sam   \n",
-       "28           5.2          3.4           1.4          0.2  Setosa       Sam   \n",
-       "29           4.7          3.2           1.6          0.2  Setosa       Sam   \n",
-       "30           4.8          3.1           1.6          0.2  Setosa       Sam   \n",
-       "39           5.1          3.4           1.5          0.2  Setosa       Sam   \n",
-       "40           5.0          3.5           1.3          0.3  Setosa       Sam   \n",
-       "43           5.0          3.5           1.6          0.6  Setosa       Sam   \n",
-       "44           5.1          3.8           1.9          0.4  Setosa       Sam   \n",
-       "45           4.8          3.0           1.4          0.3  Setosa       Sam   \n",
-       "\n",
-       "    predicate_proba  predicate_wrong_pred  \n",
-       "0               0.0                   0.0  \n",
-       "2               0.0                   0.0  \n",
-       "6               0.0                   0.0  \n",
-       "7               NaN                   NaN  \n",
-       "8               NaN                   NaN  \n",
-       "10              0.0                   0.0  \n",
-       "12              0.0                   0.0  \n",
-       "14              0.0                   0.0  \n",
-       "15              0.0                   0.0  \n",
-       "18              NaN                   NaN  \n",
-       "19              0.0                   0.0  \n",
-       "20              0.0                   0.0  \n",
-       "21              0.0                   0.0  \n",
-       "24              NaN                   NaN  \n",
-       "26              NaN                   NaN  \n",
-       "28              0.0                   0.0  \n",
-       "29              0.0                   0.0  \n",
-       "30              0.0                   0.0  \n",
-       "39              0.0                   0.0  \n",
-       "40              NaN                   NaN  \n",
-       "43              0.0                   0.0  \n",
-       "44              NaN                   NaN  \n",
-       "45              NaN                   NaN  "
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If there's time, use pandera for hypothesis testing check for something more robust"
    ]
@@ -1394,7 +1048,8 @@
     }
    ],
    "source": [
-    "#Here's what you can type into default.ipynb\n",
+    "# move to default.ipynb\n",
+    "import pandas as pd\n",
     "min = pd.DataFrame(\n",
     "    index=['Setosa', 'Versicolor', 'Virginica'], \n",
     "    data={\n",
@@ -1407,21 +1062,7 @@
     "      .join(min, on='variety')\n",
     "      .query('petal_length > min_petal_length | petal_width > min_petal_width')\n",
     ")\n",
-    "result if not result.empty else None\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "min\n",
-    "(\n",
-    "    df[['variety', 'petal_length', 'petal_width']]\n",
-    "      .join(min, on='variety')\n",
-    "      .query('petal_length < min_petal_length | petal_width < min_petal_width')\n",
-    ")\n"
+    "result if not result.empty else None"
    ]
   },
   {
