--- a/data_chimp/default.ipynb
+++ b/data_chimp/default.ipynb
@@ -171,33 +171,11 @@
         "JOIN users USING id\n",
         "\"\"\""
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import pandas as pd\n",
-        "min = pd.DataFrame(\n",
-        "    index=['Setosa', 'Versicolor', 'Virginica'], \n",
-        "    data={\n",
-        "          'min_petal_length': [10, 30, 45],\n",
-        "          'min_petal_width': [1, 10, 14],\n",
-        "  })\n",
-        "\n",
-        "result = (\n",
-        "    df[['variety', 'petal_length', 'petal_width']]\n",
-        "      .join(min, on='variety')\n",
-        "      .query('petal_length > min_petal_length | petal_width > min_petal_width')\n",
-        ")\n",
-        "result if not result.empty else None"
-      ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -211,12 +189,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1 (main, Dec 12 2022, 12:11:53) [Clang 13.1.6 (clang-1316.0.21.2.5)]"
+      "version": "3.10.8"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "13523e3cd1fbae48a3d0ca7b45a7084217927e918d7de376d1166dc0bc3d46c7"
+        "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
       }
     }
   },
