--- a/prep/ex1_finished.ipynb
+++ b/prep/ex1_finished.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "[150 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -872,13 +872,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 9015,\n",
-      "  \"iopub_port\": 9017,\n",
-      "  \"stdin_port\": 9016,\n",
-      "  \"control_port\": 9014,\n",
-      "  \"hb_port\": 9013,\n",
+      "  \"shell_port\": 9002,\n",
+      "  \"iopub_port\": 9004,\n",
+      "  \"stdin_port\": 9003,\n",
+      "  \"control_port\": 9001,\n",
+      "  \"hb_port\": 9000,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"aded6afd-a647-440e-bf9d-cbae6471bd7d\",\n",
+      "  \"key\": \"096ae126-8f38-4db4-91a0-9057db9a4cb3\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -887,7 +887,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-v2-55034eJOBPy5Wms34.json\n",
+      "    $> jupyter <app> --existing kernel-v2-4027ylRiDSqy7ef.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -1476,22 +1476,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deploy pipeline to civo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# If there's time, show cleanlab demo"
+    "from deepchecks.tabular import Dataset\n",
+    "ds = Dataset(df)\n",
+    "\n",
+    "from deepchecks.tabular.suites import data_integrity\n",
+    "\n",
+    "# Run Suite:\n",
+    "integ_suite = data_integrity()\n",
+    "suite_result = integ_suite.run(ds)\n",
+    "# Note: the result can be saved as html using suite_result.save_as_html()\n",
+    "# or exported to json using suite_result.to_json()\n",
+    "suite_result.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1505,12 +1506,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec 12 2022, 12:11:53) [Clang 13.1.6 (clang-1316.0.21.2.5)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "13523e3cd1fbae48a3d0ca7b45a7084217927e918d7de376d1166dc0bc3d46c7"
+    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
    }
   }
  },
