--- a/data_chimp/default.ipynb
+++ b/data_chimp/default.ipynb
@@ -175,7 +175,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -189,12 +189,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.8"
+      "version": "3.11.1"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
+        "hash": "13523e3cd1fbae48a3d0ca7b45a7084217927e918d7de376d1166dc0bc3d46c7"
       }
     }
   },
