--- a/ex1.ipynb
+++ b/ex1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('iris.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/getdatachimp/demo/main/iris.csv')\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X = df[['sepal_length', 'sepal_width', 'petal_length', 'petal_width']]\n",
     "y = df['variety'].map({'Setosa': 0, 'Versicolor': 1, 'Virginica': 2})\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
@@ -88,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec 12 2022, 12:11:53) [Clang 13.1.6 (clang-1316.0.21.2.5)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
