--- a/data_chimp/default.ipynb
+++ b/data_chimp/default.ipynb
@@ -171,6 +171,30 @@
         "JOIN users USING id\n",
         "\"\"\""
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# import pandas as pd\n",
+        "\n",
+        "# min = pd.DataFrame(\n",
+        "#   index=['Setosa', 'Versicolor', 'Virginica'],\n",
+        "#   data={\n",
+        "#     'min_petal_length': [10, 30, 45],    \n",
+        "#   }\n",
+        "# )\n",
+        "\n",
+        "# result = (\n",
+        "#   df[['variety', 'petal_length', 'petal_width']]\n",
+        "#     .join(min, on='variety')\n",
+        "#     .query('petal_length > min_petal_length')\n",
+        "# )\n",
+        "\n",
+        "# result if not result.empty else None"
+      ]
     }
   ],
   "metadata": {
