--- a/data_chimp/default.ipynb
+++ b/data_chimp/default.ipynb
@@ -175,7 +175,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "tags": [
+          "dchimp.ignore"
+        ]
+      },
       "outputs": [],
       "source": [
         "# move to default.ipynb\n",
@@ -193,6 +197,25 @@
         "      .query('petal_length > min_petal_length | petal_width > min_petal_width')\n",
         ")\n",
         "result if not result.empty else None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from deepchecks.tabular import Dataset\n",
+        "ds = Dataset(df)\n",
+        "\n",
+        "from deepchecks.tabular.suites import data_integrity\n",
+        "\n",
+        "# Run Suite:\n",
+        "integ_suite = data_integrity()\n",
+        "suite_result = integ_suite.run(ds)\n",
+        "# Note: the result can be saved as html using suite_result.save_as_html()\n",
+        "# or exported to json using suite_result.to_json()\n",
+        "suite_result.show()"
       ]
     }
   ],
