--- a/data_chimp/default.ipynb
+++ b/data_chimp/default.ipynb
@@ -28,7 +28,11 @@
     {
       "cell_type": "code",
       "execution_count": 4,
-      "metadata": {},
+      "metadata": {
+        "tags": [
+          "dchimp.ignore"
+        ]
+      },
       "outputs": [
         {
           "data": {
@@ -202,7 +206,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "tags": [
+          "dchimp.ignore"
+        ]
+      },
       "outputs": [],
       "source": [
         "from deepchecks.tabular import Dataset\n",
